--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/quiz.json":["assets/quiz.json"],"assets/quiz2.json":["assets/quiz2.json"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/papa_quiz.json":["assets/papa_quiz.json"],"assets/quiz.json":["assets/quiz.json"],"assets/quiz1.json":["assets/quiz1.json"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
